fix: Improve CORS configuration with exposed headers
Added setExposedHeaders and changed setAllowedHeaders to use Arrays.asList for proper wildcard handling.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>